--- a/AllPages/orca.html
+++ b/AllPages/orca.html
@@ -106,6 +106,13 @@
     <div class="KillTitle">
         <a href="" class="OrcTitK">Killer</a>
         <a href="" class="OrcTitW">Whales</a>
+        <img class="displacerlinks imgOrc1" src="/img/orca/orca1.webp" alt="">
+        <img class="displacerrechts imgOrc2" src="/img/orca/orca2.webp" alt="">
+        <img class="displacerlinks imgOrc3" src="/img/orca/orca3.webp" alt="">
+        <img class="displacerrechts imgOrc4" src="/img/orca/orca4.webp" alt="">
+ <!--        <div class="img-Orcas">
+
+        </div> -->
     </div>
     <div class="KillSec1">
         <video id="background-Orac-vid" autoplay loop muted playsinline poster="/img/orca/OrcaSec3Pic.png">
