--- a/AllPages/About.html
+++ b/AllPages/About.html
@@ -42,7 +42,7 @@
                 </a>
             </li>
             <li class="ticker">
-                <a href="AllPages/potwhale.html" class="nav-link">
+                <a href="/AllPages/potwhale.html" class="nav-link">
                     <div class="nav-band">Pot Whale&nbsp;&nbsp</div>
                     <div class="nav-band">Pot Whale&nbsp;&nbsp</div>
                     <div class="nav-band">Pot Whale&nbsp;&nbsp</div>
@@ -51,7 +51,7 @@
                 </a>
             </li>
             <li class="ticker">
-                <a href="AllPages/orca.html" class="nav-link">
+                <a href="/AllPages/orca.html" class="nav-link">
                     <div class="nav-band">Orca&nbsp;&nbsp</div>
                     <div class="nav-band">Orca&nbsp;&nbsp</div>
                     <div class="nav-band">Orca&nbsp;&nbsp</div>
@@ -63,7 +63,7 @@
                 </a>
             </li>
             <li class="ticker">
-                <a href="AllPages/bluewhale.html" class="nav-link">
+                <a href="/AllPages/bluewhale.html" class="nav-link">
                     <div class="nav-band">Blue Whale&nbsp;&nbsp</div>
                     <div class="nav-band">Blue Whale&nbsp;&nbsp</div>
                     <div class="nav-band">Blue Whale&nbsp;&nbsp</div>
