--- a/AllPages/potwhale.html
+++ b/AllPages/potwhale.html
@@ -126,7 +126,7 @@
             <img class="Sleep SleepPot5" src="/img/PotWhale/SleepingPotW5.webp" value="3" alt="">
             <img class="Sleep SleepPot6" src="/img/PotWhale/SleepingPotW6.webp" value="2" alt="">
             <img class="Sleep SleepPot7" src="/img/PotWhale/SleepingPotW7.webp" value="3" alt="">
-            <video src="/img/PotWhale/Sleeping sperm whale.mp4" autoplay muted loop></video>
+            <video src="/img/PotWhale/SleepingSpermWhale.mp4" autoplay muted loop></video>
         </div>
         <p>Sperm whales are highly social animals that live in groups, or "pods" that can contain dozens of individuals.
             They communicate with each other using a variety of clicks and whistles, and have been known to coordinate
