--- a/AllPages/orca.html
+++ b/AllPages/orca.html
@@ -116,7 +116,7 @@
     </div>
     <div class="KillSec1">
         <video id="background-Orac-vid" autoplay loop muted playsinline poster="/img/orca/OrcaSec3Pic.png">
-            <source src="/img/orca/orcaSec1.mp4" type="video/mp4">
+            <source src="/img/orca/orcasec1.mp4" type="video/mp4">
         </video>
         <p>Orcas are the largest member of the dolphin family and one of the most widely distributed marine mammals in
             the world. They can be found in all of the world's oceans, from the Arctic to the Antarctic.</p>
@@ -130,7 +130,7 @@
 
     <div class="KillSec3">
         <video id="background-Orac-vid" autoplay loop muted playsinline poster="/img/orca/OrcaSec3Pic.png">
-            <source src="/img/orca/OrcaSec3.mp4" type="video/mp4">
+            <source src="/img/orca/orcasec3.mp4" type="video/mp4">
         </video>
         <p>Orcas are apex predators, meaning they have no natural predators in the wild. They feed on a variety of prey,
             including fish, seals, sea lions, and even other whales.
